--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SDActivity"> </activity>
-        <activity android:name=".CibaoActivity"> </activity>
-        <activity android:name=".EsteActivity"> </activity>
-        <activity android:name=".SurActivity"> </activity>
-        <activity android:name=".MapaActivity"> </activity>
-
+        <activity android:name=".SantoDomingoActivity"
+            android:label="@string/title_activity_santo_domingo"/>
+        <activity android:name=".CibaoActivity"
+            android:label="@string/title_activity_cibao"/>
+        <activity android:name=".EsteActivity"
+            android:label="@string/title_activity_este"/>
+        <activity android:name=".SurActivity"
+            android:label="@string/title_activity_sur"/>
+        <activity android:name=".MapaActivity"
+            android:label="@string/title_activity_mapa"></activity>
     </application>
 
 </manifest>
